tests/fail/0002_bool_arithmetic.ee
fn main() {
    print(true + 1);
}
